# contracts_lite_vendor-release

./: .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
