<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contracts_lite_vendor</name>
  <version>0.5.0</version>
  <description>ROS 2 wrapper for the Contracts Lite project.</description>
  <author email="jeff@mapless.ai">Jeffrey Kane Johnson</author>
  <maintainer email="jeff@mapless.ai">Jeffrey Kane Johnson</maintainer>
  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/ros-safety/contracts_lite_vendor/issues</url>
  <url type="repository">https://github.com/ros-safety/contracts_lite_vendor.git</url>
  <url type="website">https://github.com/ros-safety/contracts_lite_vendor</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
